[gd_scene load_steps=19 format=2]

[ext_resource path="res://loginyregistrar/LoginScreen.gd" type="Script" id=1]
[ext_resource path="res://addons/simple-gui-transitions/example/theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/simple-gui-transitions/materials/transform.tres" type="Material" id=3]
[ext_resource path="res://art/registro/Imagen8.jpg" type="Texture" id=4]
[ext_resource path="res://ui utility/edificios-en-ciudad-de-noche-con-iluminacion-neon-azul_1920x1080_xtrafondos.com.jpg" type="Texture" id=5]
[ext_resource path="res://art/inicio_sesion/imagen1.png" type="Texture" id=6]
[ext_resource path="res://art/inicio_sesion/Imagen2.png" type="Texture" id=7]
[ext_resource path="res://art/registro/Imagen10.png" type="Texture" id=8]
[ext_resource path="res://art/inicio_sesion/Imagen3.png" type="Texture" id=9]
[ext_resource path="res://art/inicio_sesion/Imagen7.png" type="Texture" id=10]
[ext_resource path="res://art/registro/Imagen5.png" type="Texture" id=11]
[ext_resource path="res://art/inicio_sesion/Imagen4.png" type="Texture" id=12]
[ext_resource path="res://art/registro/Imagen3.png" type="Texture" id=13]
[ext_resource path="res://art/inicio_sesion/Imagen6.png" type="Texture" id=14]

[sub_resource type="Theme" id=1]

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "animacion"
length = 2.0

[sub_resource type="Animation" id=4]
resource_name = "run"
loop = true

[node name="LoginScreen" type="Control"]
material = ExtResource( 3 )
anchor_right = 2.055
anchor_bottom = 0.599
margin_right = -1300.82
margin_bottom = 245.813
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.00292969
anchor_right = 1.00293
anchor_bottom = 0.993333
margin_left = -7.42329
margin_right = -7.42383
margin_bottom = 4.08685
texture = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect"]
margin_left = -176.189
margin_top = 12.0
margin_right = 547.811
margin_bottom = 562.0
texture = ExtResource( 12 )
expand = true

[node name="TextureRect5" type="TextureRect" parent="NinePatchRect"]
margin_left = 540.811
margin_top = 15.0
margin_right = 1236.81
margin_bottom = 603.0
texture = ExtResource( 12 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect"]
margin_left = 90.0
margin_top = 18.0
margin_right = 507.0
margin_bottom = 459.0
texture = ExtResource( 6 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="NinePatchRect"]
margin_left = 714.811
margin_top = -38.0
margin_right = 1336.81
margin_bottom = 532.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
margin_left = 234.0
margin_top = 188.0
margin_right = 1029.0
margin_bottom = 920.0
texture = ExtResource( 14 )
expand = true

[node name="TextureRect6" type="TextureRect" parent="NinePatchRect"]
margin_left = 396.811
margin_top = 201.0
margin_right = 854.811
margin_bottom = 319.0
texture = ExtResource( 10 )

[node name="LoginContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -199.689
margin_top = 341.0
margin_right = 226.311
margin_bottom = 688.0

[node name="Titulo" type="Label" parent="NinePatchRect/LoginContainer"]
visible = false
margin_right = 426.0
margin_bottom = 47.0
text = "Login Screen
"
align = 1

[node name="NombreUsuario" type="Label" parent="NinePatchRect/LoginContainer"]
margin_right = 426.0
margin_bottom = 22.0
text = "Nombre de Usuario"

[node name="In_Usuario" type="LineEdit" parent="NinePatchRect/LoginContainer"]
margin_top = 26.0
margin_right = 426.0
margin_bottom = 58.0

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/LoginContainer"]
margin_top = 62.0
margin_right = 426.0
margin_bottom = 66.0

[node name="Contraseña" type="Label" parent="NinePatchRect/LoginContainer"]
margin_top = 70.0
margin_right = 426.0
margin_bottom = 92.0
text = "Contraseña"

[node name="In_Contrasena" type="LineEdit" parent="NinePatchRect/LoginContainer"]
margin_top = 96.0
margin_right = 426.0
margin_bottom = 128.0
max_length = 15
secret = true

[node name="HSeparator2" type="HSeparator" parent="NinePatchRect/LoginContainer"]
margin_top = 132.0
margin_right = 426.0
margin_bottom = 136.0

[node name="LoginBttn" type="Button" parent="NinePatchRect/LoginContainer"]
margin_top = 140.0
margin_right = 426.0
margin_bottom = 174.0
text = "Login"

[node name="RegisterRedi" type="Button" parent="NinePatchRect/LoginContainer"]
margin_top = 178.0
margin_right = 426.0
margin_bottom = 212.0
text = "Register"

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D"]
margin_right = 1025.0
margin_bottom = 599.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/NinePatchRect"]
margin_left = 77.0
margin_top = 42.0
margin_right = 963.0
margin_bottom = 556.0
theme = SubResource( 1 )

[node name="textoNumero" type="Label" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_right = 886.0
margin_bottom = 22.0
text = "Número: "
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="numeroBase" type="Label" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_top = 26.0
margin_right = 886.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 78 )

[node name="Button" type="Button" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_top = 52.0
margin_right = 886.0
margin_bottom = 86.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 169, 97.002 )

[node name="Button2" type="Button" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_top = 90.0
margin_right = 886.0
margin_bottom = 124.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 169, 97.002 )

[node name="Button3" type="Button" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_top = 128.0
margin_right = 886.0
margin_bottom = 162.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 169, 97.002 )

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
visible = false
margin_right = 1233.0
margin_bottom = 613.0
texture = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2"]
margin_left = 54.0
margin_top = 48.0
margin_right = 1179.0
margin_bottom = 566.0
texture = ExtResource( 8 )
expand = true

[node name="RegisterContainer" type="VBoxContainer" parent="NinePatchRect2"]
anchor_left = 0.488
anchor_top = 0.138
anchor_right = 0.488
anchor_bottom = 0.138
margin_left = -400.704
margin_top = 138.406
margin_right = -14.704
margin_bottom = 498.406

[node name="Titulo" type="Label" parent="NinePatchRect2/RegisterContainer"]
visible = false
margin_right = 386.0
margin_bottom = 47.0
text = "Register
"
align = 1

[node name="NombreCompleto" type="Label" parent="NinePatchRect2/RegisterContainer"]
margin_right = 386.0
margin_bottom = 22.0
text = "Nombre Completo:"

[node name="In_Nombres" type="LineEdit" parent="NinePatchRect2/RegisterContainer"]
margin_top = 26.0
margin_right = 386.0
margin_bottom = 58.0

[node name="N_Usuario" type="Label" parent="NinePatchRect2/RegisterContainer"]
margin_top = 62.0
margin_right = 386.0
margin_bottom = 84.0
text = "Usuario (Alias):"

[node name="In_Usuario" type="LineEdit" parent="NinePatchRect2/RegisterContainer"]
margin_top = 88.0
margin_right = 386.0
margin_bottom = 120.0

[node name="Contrasena" type="Label" parent="NinePatchRect2/RegisterContainer"]
margin_top = 124.0
margin_right = 386.0
margin_bottom = 146.0
text = "Contraseña:"

[node name="In_Contrasena" type="LineEdit" parent="NinePatchRect2/RegisterContainer"]
margin_top = 150.0
margin_right = 386.0
margin_bottom = 182.0
max_length = 15
secret = true

[node name="RegisterBttn" type="Button" parent="NinePatchRect2/RegisterContainer"]
margin_top = 186.0
margin_right = 386.0
margin_bottom = 220.0
text = "Register"

[node name="LoginRedi" type="Button" parent="NinePatchRect2/RegisterContainer"]
margin_top = 224.0
margin_right = 386.0
margin_bottom = 258.0
text = "Login"

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect2"]
margin_left = 453.0
margin_top = 80.0
margin_right = 1272.0
margin_bottom = 933.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect2"]
margin_left = -15.0
margin_top = 27.0
margin_right = 1002.0
margin_bottom = 216.0
texture = ExtResource( 13 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/animacion = SubResource( 3 )
anims/run = SubResource( 4 )

[connection signal="toggled" from="NinePatchRect/LoginContainer/LoginBttn" to="." method="_on_LoginBttn_toggled"]
[connection signal="pressed" from="NinePatchRect/LoginContainer/RegisterRedi" to="." method="_on_RegisterRedi_pressed"]
[connection signal="pressed" from="NinePatchRect2/RegisterContainer/LoginRedi" to="." method="_on_LoginRedi_pressed"]
